# backend/src/main/java/fr/univcours/api/Main.java
@@ -40,7 +40,7 @@ public class Main {
             // On enregistre le plugin Swagger
             config.plugins.register(new SwaggerPlugin(swaggerConfig));
 
-        }).start(7000);
+        }).start(3000);
 
         System.out.println("🚀 Serveur démarré sur http://localhost:7000");
 
@@ -56,6 +56,9 @@ public class Main {
         app.get("/commandes/{id}", CommandeController::getById);
         app.delete("/commandes/{id}", CommandeController::delete);
         app.put("/commandes/{id}", CommandeController::updateById);
+        app.get("/nextCommandeId",CommandeController::getNextCommandeId);
+        app.get("/commandes/{commande_id}/total", CommandeController::getTotal);
+        app.get("/commandes/{commande_id}/commandes",CommandeController::getByNumero);
 
         app.get("/articles", ArticleController::getAllArticle);
         app.get("/articles/{id}",ArticleController::getArticleById);
